@@ -1,3 +1,7 @@
+2001-10-06 15:28 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
+  ! source/rdd/dbfntx/dbfntx1.c
+    ! Few fixes
+
 2001-10-05 23:12 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   ! source/rdd/dbf1.c
     ! hb_dbfRecall() fixed
